WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237520
[web-animations] line-break should support discrete animations
https://bugs.webkit.org/show_bug.cgi?id=237520
Summary
[web-animations] line-break should support discrete animations
Antoine Quint
Reported
2022-03-07 03:20:25 PST
[web-animations] line-break should support discrete animations
Attachments
Patch
(3.96 KB, patch)
2022-03-07 03:20 PST
,
Antoine Quint
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2022-03-07 03:20:49 PST
Created
attachment 453958
[details]
Patch
Antoine Quint
Comment 2
2022-03-07 06:19:54 PST
Committed
r290885
(
248116@trunk
): <
https://commits.webkit.org/248116@trunk
>
Radar WebKit Bug Importer
Comment 3
2022-03-07 06:20:17 PST
<
rdar://problem/89902810
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug