[web-animations] line-break should support discrete animations https://bugs.webkit.org/show_bug.cgi?id=237520

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-pseudo/parsing/marker-supported-properties-in-animation-expected.txt:

Source/WebCore:

* animation/CSSPropertyAnimation.cpp:
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):


Canonical link: https://commits.webkit.org/248116@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290885 268f45cc-cd09-0410-ab3c-d52691b4dbfc